--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,135 @@ a {
     color: var(--main-bg-color)
 }
 
+/****** Navbar ***********/
+
+.nav-bar {
+    display:flex;
+    justify-content: space-between;
+    padding-bottom: 60px;
+}
+
+.nav-links {
+    list-style: none;
+    display: flex;
+    gap: 68px;
+    margin-top: 0;  
+}
+
+.nav-links li {
+    font-size: 16px;
+}
+
+.logo img {
+    height: 19px;
+    margin-top: 20px;
+}
+
+/****** Titre d'accueil ***********/
+
+
+.title-h1 {
+    font-size: 22px;
+    margin: 0;
+}
+
+.subtitle-h1 {
+    margin: 10px 0 0 0;
+    padding: 0 0 15px 0;
+    font-size: 16px;
+}
+/****** Search bar ***********/
+
+.search-box {
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+    margin-bottom: 40px;
+  }
+  
+  .icon-location {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: auto;
+    background-color: #F2F2F2;
+    border-radius: 15px 0 0 15px;
+  }
+  
+.fa-location-dot {
+    color: black;
+}
+
+.search-bar {
+    padding-left: 20px;
+    height: auto;
+    width: 180px;
+    border: none;
+    border-top: solid 1px #F2F2F2;
+    border-bottom: solid 1px #F2F2F2;
+} 
+
+.search-bar::placeholder {
+    color: black;
+    font-size: 18px;
+    font-weight: 700;
+  }
+
+
+.search-button {
+    border: none;
+    border-radius: 0 15px 15px 0;
+    background-color: #0065fc;
+    color: white;
+    font-weight: 700;
+    font-size: 18x;
+    padding: 17px;
+}
+
+.search-button:hover {
+    cursor: pointer;
+    opacity: 0.9;
+}
+
+/****** Filtres ***********/
+
+.filters-title {
+    font-size: 18px;
+}
+
+.filters {
+    display:flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 40px;
+}
+
+.filters-icon {
+    display: flex;
+    align-items:center;
+    background-color: white;
+    border: 2px solid #F2F2F2;
+    border-radius: 25px;
+    display: inline-block;
+    color: black;
+    font-size: 17px;
+    font-weight: bold;
+    text-decoration: none;
+    padding: 10px 19px 10px 19px;
+    margin-right: 10px;
+}
+
+.filters-icon:hover {
+    cursor: pointer;
+    background-color: grey;
+    opacity: 0.2;
+}
+
+.fa-money-bill-wave, .fa-person, .fa-heart, .fa-fire  {
+    padding-right: 10px;
+}
+
 /****** Hebergements And Populaires ***********/
 .hebergements-and-populaires {
     display: flex;
@@ -80,23 +209,49 @@ a {
 /****** Activites ***********/
 
 .activites {
+    padding: 40px 0;
+}
+
+.activites-title {
+    margin-left: 40px;
+}
+
+.activites-card {
     display: flex;
-    flex-direction: row;
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
+    justify-content: center;
+    gap: 20px;
+    flex-wrap: wrap; /*adapté petits écrans*/
+    padding: 3%;
+
 }
 
-.activites.cards {
-    box-sizing: border-box;
-    width: 50%;
+.activites-card-content {
+    background-color: white;
+    border-radius: 20px;
+    padding: 0;
+    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: auto;
+    
 }
 
-.activites img{
-    width: 50%;
-    height: 380px;
+.activites-card img {
+    border-radius: 20px 20px 0 0;
+    width: 297.5px;
+    height: 387px; 
     object-fit: cover;
+    margin: 0;
 }
 
+.activites-card-title {
+    font-size: 16px;
+}
+
+.activites-card-txt {
+    padding-left: 20px; 
+}
 /****** Populaires ***********/
 .populaires {
     width: 32%;
