--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ a {
 
 .nav-links li {
     box-sizing: border-box; /* Inclut padding et border dans la hauteur totale */
-    padding-top: 10px; /* Espace entre la bordure et le texte */
+    padding-top: 8px; /* Espace entre la bordure et le texte */
     display: flex;
     align-items: center; /* Centre verticalement le texte */
     position: relative;
@@ -98,14 +98,14 @@ a {
 
 
 .title-h1 {
-    font-size: 22px;
+    font-size: 1.6em;
     margin: 0;
 }
 
 .subtitle-h1 {
     margin: 10px 0 0 0;
     padding: 0 0 15px 0;
-    font-size: 16px;
+    font-size: 1.2em;
 }
 /****** Search bar ***********/
 
@@ -161,6 +161,9 @@ a {
     opacity: 0.9;
 }
 
+#icon-glass {
+    display: none;
+}
 /****** Filtres ***********/
 
 .filters-title {
@@ -171,21 +174,21 @@ a {
     display:flex;
     align-items: center;
     gap: 20px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 .filters-icon {
     display: flex;
     align-items:center;
     background-color: white;
-    border: 2px solid #F2F2F2;
-    border-radius: 25px;
+    border: 2px solid #D9D9D9;
+    border-radius: 30px;
     display: inline-block;
     color: black;
-    font-size: 17px;
+    font-size: 18px;
     font-weight: bold;
     text-decoration: none;
-    padding: 10px 19px 10px 19px;
+    padding: 14px 19px 14px 19px;
     margin-right: 10px;
 }
 
@@ -415,6 +418,18 @@ a {
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
 @media (max-width: 1024px) {
+
+    .filters {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 0;
+
+    }
+
+    #icon-glass {
+        display: none;
+    }
+
     .hebergements-and-populaires {
         flex-direction: column;
     }
@@ -472,10 +487,264 @@ a {
         height: 200px;
         object-fit: cover;
     }
+
 }
 
 
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) {
-    /* ... */
+    
+    
+
+    .main-container {
+        display: grid;
+        grid-template-rows: auto auto;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+    }
+
+    .nav-bar {
+        display: grid;
+        grid-template-rows: auto auto;
+        grid-template-columns: 1fr;
+        justify-items: center;
+        text-align: center;
+        padding-bottom: 20px;
+        
+        
+    }
+
+    .nav-links {
+        display: grid;
+        grid-template-columns: repeat(2, auto);
+        gap: 20px;
+        width: 120%;
+        padding: 10px 0 0 10px;
+        border-bottom: 2px solid #ddd;
+    }
+
+    .nav-links li {
+        font-size: 20px;
+        display: flex;
+        justify-content: center;
+        padding: 30px 0 5px 0;
+        text-align: center;
+    }
+
+    
+
+    .nav-links li:hover {
+        border-bottom: 2px solid var(--main-color);
+        border-top: none;
+        
+    }
+
+    .logo img {
+       margin: 30px 0 0 0;
+    }
+
+    .title-h1, .subtitle-h1 {
+        padding-left: 10px;
+    }
+
+    .search-box {
+        padding-left: 10px;
+    }
+
+    #search-button {
+        display: none;
+    }
+
+    #icon-glass {
+        display: block;
+        position: absolute;
+        right: 30px;
+        border-radius: 20px;
+        border: none; 
+        background-color: var(--main-color);
+        width: 55px;
+        height: 55px;
+        box-shadow: 0 3px 5px rgba(0 0 0 / 30%);    
+    }
+
+    .icon-glass {
+        color: white;
+        font-size: 1.2em;
+        align-items: center;
+    }
+
+    .icon-location {
+        width: 55px;
+        font-size: 1.2em;
+    }
+
+    .search-bar {
+        width: 250px;
+        height: 50px;
+        
+    }
+
+    .filters-content {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 20px 10px;  
+        padding-left: 10px; 
+    }
+
+    .filters-title {
+        font-size: 1.4em;
+        padding-left: 10px;
+        margin-top: 0;
+    }
+
+    .filter-icon {
+        font-size: 1.5em;
+    }
+
+    .filters-icon {
+        display: flex;
+        align-items: center; 
+        font-size: 1em;  
+    }
+
+    .info-title .fa-info {
+        width: 3em;
+    }
+
+    .info {
+        display: flex;
+        justify-content: center;
+        font-size: 1.1em;
+        padding-left: 10px;
+        margin: 0;
+    }
+    
+    .hebergements-and-populaires{
+        display: flex;
+        flex-direction: column-reverse;  
+        position: relative;
+        top: -50px;
+    }
+
+    .hebergements-and-populaires section {
+        background-color: white;
+        border-radius: 0px;
+        padding: 0;
+        
+    }
+ 
+    .populaires-cards {
+        display: grid;
+        grid-template-rows: repeat(3, 1fr);
+        width: 120%; 
+        background-color: #F2F2F2;
+        position: relative;
+        left: -10px;
+        padding-left: 10px;
+        
+    }
+
+    .populaires-cards .card {
+        width: 23em;
+        display: flex;
+        margin: 8px;
+        
+    }
+
+    .populaires-cards img {
+        height: 150px;
+    }
+
+    .populaires-title .section-title{   
+        font-size: 1.5em;
+    }
+
+    .fa-chart-line {
+        font-size: 1.4em;
+        position: relative;
+        left: -110px;
+    }
+        
+    .populaires-title {
+        background-color: #F2F2F2;
+        width: 120%;
+        padding: 30px 10px 10px 20px;
+        position: relative;
+        left: -10px;
+    }
+    
+    .card-txt .card-title {
+        font-size: 1.1em;
+    }
+
+    .card-txt .card-subtitle {
+        font-size: 1em;
+    }
+
+    .card-rating {
+        font-size: 1.2em;
+    }
+    
+    .hebergements-title .section-title {
+        font-size: 1.5em;
+        position: relative;
+        top: 10px;
+    }
+
+    .hebergements-title {
+        padding: 30px 20px 0px 20px;
+    }
+
+    .hebergements-cards .card {
+        width: 22em;
+        display: flex;
+    }
+
+    .hebergements-cards, .hebergements-cta {
+        padding-left: 20px;
+
+    }
+
+    .hebergements-cards img {
+        height: 120px;
+    }
+
+    .activites-card-content {
+        width: 22em;
+    }
+
+    .activites-title {
+        position: relative;
+        left: -10px;
+        top: -20px;
+        padding-bottom:10px;
+    }
+    .activites-card-content img {
+        width: 22em;
+        height: 160px;
+    }
+
+    .activites-card-title {
+        font-size: 1.2em;
+    }
+
+
+    .footer-container {
+        display: grid;
+        grid-template-columns: auto;
+        gap: 30px;
+        width: 120%;
+        position: relative;
+        left: -10px;
+        bottom: -10px;
+    }
+
+     .footer-container .footer-title {
+        font-size: 1.4em;
+    }
+
+    .footer-container .footer-txt {
+        font-size: 1.2em;
+    }
 }
