--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 /****** General ***********/
-body {
+* {
     font-family: 'Raleway', sans-serif;
-    margin: 0;
 }
 
 :root {
@@ -17,17 +16,16 @@ body {
 body {
     display: flex;
     justify-content: center;
+    margin: 0;
     background-color: white;
 }
 
-
-main {
-    width: 98%;
+.main-container {
+    width: 100%;
     max-width: 1440px;
-    min-width: 320px;
-    margin: 0 auto;
-    padding: 0 20px;
-  }
+    box-sizing: border-box;
+    padding: 0 50px;
+}
 
 a {
     color: inherit;
@@ -65,37 +63,32 @@ a {
 
 /****** Navbar ***********/
 
-.nav-bar {
-    display:flex;
+header {
+    display: flex;
     justify-content: space-between;
-    padding-bottom: 60px;
-
-}
-
-.nav-links {
-    list-style: none;
-    display: flex;
-    gap: 68px;
-    margin-top: 0;
-}
-
-.nav-links li {
-    box-sizing: border-box; /* Inclut padding et border dans la hauteur totale */
-    padding-top: 8px; /* Espace entre la bordure et le texte */
-    display: flex;
-    align-items: center; /* Centre verticalement le texte */
-    position: relative;
-    bottom: 8px;
-}
-
-.nav-links li:hover {
-    color: var(--main-color); 
-    border-top: 2px solid var(--main-color);
 }
 
 .logo img {
     height: 19px;
-    margin-top: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+
+.nav-bar ul {
+    display: flex;
+    gap: 68px;
+    list-style-type: none;
+    margin: 0;
+}
+
+.nav-bar li {
+    padding-top: 16px;
+    text-align: center;
+}
+
+.nav-bar li:hover {
+    border-top: 2px solid var(--main-color);
 }
 
 /****** Titre d'accueil ***********/
@@ -134,10 +127,11 @@ a {
     color: black;
 }
 
+
 .search-bar {
     padding-left: 20px;
-    height: auto;
-    width: 180px;
+    height: 50px;
+    width: 220px;
     border: none;
     border-top: solid 1px #F2F2F2;
     border-bottom: solid 1px #F2F2F2;
@@ -177,9 +171,15 @@ a {
 
 .filters {
     display:flex;
+    flex-direction: row;
     align-items: center;
     gap: 20px;
     margin-bottom: 20px;
+}
+
+.filters-content {
+    display: flex;
+    gap: 10px;
 }
 
 .filters ul {
@@ -250,32 +250,30 @@ a {
     justify-content: space-between;
 }
 
-.hebergements-and-populaires section {
-    background-color: var(--main-bg-color);
-    border-radius: 20px;
-    padding: 30px 30px 0 30px;
-    box-sizing: border-box;
-}
 
 /****** Hebergements ***********/
 .hebergements {
     width: 65%;
+    background-color: var(--main-bg-color);
+    border-radius: 20px;
+    padding: 30px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
 }
+
 
 .hebergements-title {
     margin-bottom: 30px;
 }
 .hebergements-cards {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     gap: 30px;
-}
+}    
 
-.hebergements-cards .card {
-    display: flex;
-    flex-direction:column;
-    width: 240px;
-}
 
 .hebergements-cards img {
     width: 100%;
@@ -286,9 +284,6 @@ a {
 
 .hebergements-cards .card-content {
     box-sizing: border-box;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
     padding-left: 8px;
 }
 
@@ -314,55 +309,14 @@ a {
 }
 
 
-/****** Activites ***********/
 
-.activites {
-    padding: 40px 0;
-}
-
-.activites-title {
-    margin-left: 40px;
-}
-
-.activites-card {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    flex-wrap: wrap; /*adapté petits écrans*/
-    padding: 3%;
-
-}
-
-.activites-card-content {
-    background-color: white;
-    border-radius: 20px;
-    padding: 0;
-    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    margin: auto;
-    
-}
-
-.activites-card img {
-    border-radius: 20px 20px 0 0;
-    width: 297.5px;
-    height: 387px; 
-    object-fit: cover;
-    margin: 0;
-}
-
-.activites-card-title {
-    font-size: 16px;
-}
-
-.activites-card-txt {
-    padding-left: 20px; 
-}
 /****** Populaires ***********/
 .populaires {
     width: 32%;
+    background-color: var(--main-bg-color);
+    border-radius: 20px;
+    padding: 30px 30px 30px 30px;
+    box-sizing: border-box;
 }
 
 .populaires-title {
@@ -404,6 +358,52 @@ a {
 .populaires-cards .card-rating {
     margin-bottom: 5px;
 }
+/****** Activites ***********/
+
+.activites {
+    margin: 60px 0 60px 0;
+    gap: 40px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+
+.activites-title {
+    margin-left: 40px;
+}
+
+.activites-card {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    width: 95%;
+    margin: auto;
+    gap: 30px;
+}
+
+.activites-card-content {
+    background-color: white;
+    border-radius: 20px;
+    padding: 0;
+    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+    display: flex;
+    flex-direction: column;  
+}
+
+.activites-card img {
+    border-radius: 20px 20px 0px 0px;
+    width: 100%;
+    height: 439px;
+    object-fit: cover;
+}
+
+.activites-card-title {
+    font-size: 16px;
+}
+
+.activites-card-txt {
+    padding-left: 20px; 
+}
 
 /*footer*/
 
@@ -433,21 +433,25 @@ a {
 /* Medium devices (tablets, less/equal than 1024px) */
 @media (max-width: 1024px) {
 
-    main {
+    body {
         width: 95%;
+    }
+
+
+    .logo img {
+        padding-left: 20px;
     }
 
     .filters {
         display: grid;
         grid-template-columns: 1fr;
         gap: 0;
-        
-
     }
 
     #icon-glass {
         display: none;
     }
+
 
     .hebergements-and-populaires {
         flex-direction: column;
@@ -458,31 +462,28 @@ a {
     }
 
     .hebergements-cards .card {
-        width: 95%;;
+        width: 95%;
     }
 
     .hebergements-cards {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
 
         
     }
     .populaires {
         width: 100%;
-        margin-top: 50px;
+        margin-top: 30px;
     }
 
     .populaires-cards {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        padding-bottom: 30px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr;
+        gap: 20px;
     }
 
-    .populaires-cards a {
-        width: 30%;
-    }
 
     .populaires-cards .card-title {
         font-size: 14px;
@@ -492,14 +493,18 @@ a {
         font-size: 13px;
     }
 
-
-    .activites-card-content {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        width: 193px;
-        margin: 0;    
+     
+    .activites {
+        width: 100%;
     }
+
+    .activites-card {
+        width: 95%;
+        margin: auto;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+
 
     .activites-card-txt {
         padding: 16px;
@@ -509,9 +514,10 @@ a {
     }
 
     .activites-card img {
-        width: 193px;
-        height: 200px;
+        width: 100%;
+        height: 180px;
         object-fit: cover;
+        
     }
 
 }
@@ -520,75 +526,67 @@ a {
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) {
     
+    body {
+        width:100%;
+        padding: 0;
+        margin:0;
+    }
 
     .main-container {
+        padding: 0;
+        margin:0;
         display: grid;
         grid-template-rows: 1fr auto;
-        margin: 0;
+    } 
+
+    header {
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 30px;
     }
 
-    body {
-        width: 100%;
-        margin: auto;
-    }
-
-    main {
-        width: 92%;
-    }
-    .nav-bar {
-        display: grid;
-        grid-template-rows: auto auto;
-        grid-template-columns: 1fr;
-        justify-items: center;
-        text-align: center;
-        padding-bottom: 20px;
-        
-        
-    }
-
-    .nav-links {
-        display: grid;
-        grid-template-columns: repeat(2, auto);
-        gap: 20px;
-        width: 110%;
-        padding: 10px 0 0 10px;
-        border-bottom: 2px solid #ddd;
-    }
-
-    .nav-links li {
-        font-size: 20px;
+    .logo {
         display: flex;
         justify-content: center;
-        padding: 30px 0 5px 0;
-        text-align: center;
-    }
-
-    
-
-    .nav-links li:hover {
-        border-bottom: 2px solid var(--main-color);
-        border-top: none;
+        align-items: center;
         
     }
 
     .logo img {
-       margin: 30px 0 0 0;
+        height: 29px;
     }
 
-    .title-h1, .subtitle-h1 {
-        padding-left: 10px;
+    .nav-bar ul {
+        padding: 0;
+        gap: 0;
+    }
+
+    .nav-bar li {
+        font-size: 20px;
+        padding-bottom: 16px;
+        width: 50%;
+        border-bottom: 2px solid var(--main-bg-color);
+    }
+
+    .nav-bar li:hover {
+        border-bottom: 2px solid var(--main-color);
+        border-top: none;
+    }
+
+    .welcome-title {
+        padding-left: 20px;
     }
 
     .search-box {
-        padding-left: 10px;
+        padding-left: 20px;
     }
 
     #search-button {
         display: none;
     }
-
+        
     #icon-glass {
-        display: block;
+        display:block;
         border-radius: 20px;
         border: none; 
         background-color: var(--main-color);
@@ -596,7 +594,7 @@ a {
         height: 55px;
         box-shadow: 0 3px 5px rgba(0 0 0 / 30%);    
     }
-
+        
     .icon-glass {
         color: white;
         font-size: 1.2em;
@@ -604,83 +602,99 @@ a {
         
     }
 
+    #icon-glass:hover {
+        cursor: pointer;
+        opacity: 0.9;
+    }
+        
     .icon-location {
         width: 55px;
         font-size: 1.2em;
     }
-
+        
     .search-bar {
         width: 250px;
         height: 50px;
         
     }
 
-    .filters-content {
+    .filters-title {
+        padding-left: 20px;
+    }
+
+    .filters .filters-content {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        gap: 20px 10px;  
-        padding-left: 20px; 
-        padding-right: 10px;
-    }
-
-    .filters-title {
-        font-size: 1.4em;
-        padding-left: 10px;
-        margin-top: 0;
-    }
-
-    .filter-icon {
-        font-size: 1.5em;
-    }
-
-    .filters-icon {
-        display: flex;
-        align-items: center; 
-        font-size: 1em;  
-    }
-
-    .info-title .fa-info {
-        width: 3em;
+        grid-template-rows: 1fr 1fr;
+        gap: 20px;
+        padding: 0 20px 0 20px;
     }
 
     .info {
-        display: flex;
-        justify-content: center;
-        font-size: 1.1em;
-        padding-left: 10px;
-        margin: 0;
+        padding-left: 20px;
+        padding-right: 20px;
+        font-size: 1.2em;
     }
-    
-    .hebergements-and-populaires{
+
+    .info-title .fa-info {
+        width: 30px;
+    }
+
+    .hebergements-and-populaires {
         display: flex;
         flex-direction: column-reverse;  
-        
     }
-   
-    .populaires .populaires-cards {
+
+     .hebergements {
+        width: 100%;
+        background-color: white;
+    }
+    .hebergements-cards .card-title {
+        font-size: 1.2em;
+    }
+    .hebergements-cards .card-content {
+        font-size: 1.2em;
+    }
+
+    .hebergements-cards {
+        display:grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(6, 1fr);
+    }
+    .populaires {
+        width: 100%;
+        border-radius: 0;
+    }
+
+    .fa-chart-line {
+        font-size: 1.5em;
+    }
+    .populaires-cards {
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr;
-        padding-top: 25px;
-        height: 550px;
-      }
-
-    .populaires-cards .card {
-        display: flex;
-        justify-content: center;
-        align-items: stretch;
-        width: 630px;
+        grid-template-rows: 1fr 1fr 1fr;
     }
 
-
-    .section {
-        padding: 20px 0; /* Réduction des marges pour un meilleur équilibre */
-        text-align: center;
+    .populaires-cards .card-title {
+        font-size: 1.2em;
     }
 
-    .section img {
-        max-width: 100%;
-        height: auto;
+    .populaires-cards .card-subtitle {
+        font-size: 1.2em;
+    }
+
+    .populaires-cards .card-rating {
+        font-size: 1.3em;
+    }
+
+    .activites-card {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(4,1fr);
+    }
+
+    .activites-card-title {
+        font-size: 1.2em;
     }
 
     .footer {
@@ -688,22 +702,13 @@ a {
         text-align: center;
         gap: 10px;
     }
-
-}
-
-@media screen and (max-width: 480px) {
-    .footer {
-        flex-direction: column;
-        text-align: center;
-        gap: 10px;
-    }
-
 
 
     .footer-container {
         display: grid;
         grid-template-columns: auto;
         gap: 30px;
+        border-radius: 0;
        
     }
 
