--- a/css/style.css
+++ b/css/style.css
@@ -273,7 +273,7 @@ header {
 
 .hebergements-cards {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-template-rows: 1fr 1fr;
     gap: 30px;
 }    
@@ -287,19 +287,19 @@ header {
 
 .hebergements-cards .card-content {
     box-sizing: border-box;
-    padding-left: 8px;
+    padding: 0 8px; 
 }
 
 .hebergements-cards .card-title {
-    margin-top: 10px;   
+    margin: 8px 0 ; 
 }
 
 .hebergements-cards .card-subtitle {
-    margin-bottom: 8px;
+    margin: 0;
 }
 
 .hebergements-cards .card-rating {
-    margin-bottom: 8px;
+    margin: 8px 0;
 }
 
 .hebergements-cta {
@@ -376,9 +376,7 @@ header {
 
 .activites-card {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    width: 95%;
-    margin: auto;
+    grid-template-columns: repeat(auto-fit, minmax(22%, 1fr));
     gap: 30px;
 }
 
@@ -387,8 +385,8 @@ header {
     border-radius: 20px;
     padding: 0;
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
-    display: flex;
-    flex-direction: column;  
+    width: 100%;
+    height: 100%;
 }
 
 .activites-card img {
@@ -413,7 +411,7 @@ header {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     align-items: flex-start;
-    padding-left: 20px;
+    padding: 0 20px;
 }
 
 .footer-container h3 {
